--- a/frontend/money/src/app/home/login/login.component.html
+++ b/frontend/money/src/app/home/login/login.component.html
@@ -1,10 +1,22 @@
 <h3 class="text-center">Login</h3>
-<form class="form mt-4">
-    <div class="form-group mb-3">
-        <input class="form-control" type="text" placeholder="Username" />
-    </div>
-    <div class="form-group mb-3">
-        <input class="form-control" type="password" placeholder="Password" />
-    </div>
-    <button type="submit" class="btn btn-success btn-block">Login</button>
+<form class="form mt-4" (ngSubmit)="login()">
+  <div class="form-group mb-3">
+    <input
+      class="form-control"
+      type="text"
+      placeholder="Email"
+      [(ngModel)]="email"
+      name="email"
+    />
+  </div>
+  <div class="form-group mb-3">
+    <input
+      class="form-control"
+      type="password"
+      placeholder="Password"
+      [(ngModel)]="password"
+      name="password"
+    />
+  </div>
+  <button type="submit" class="btn btn-success btn-block">Login</button>
 </form>
