--- a/frontend/money/src/app/home/new-user/new-user.component.html
+++ b/frontend/money/src/app/home/new-user/new-user.component.html
@@ -65,13 +65,13 @@
       "
       message="O campo username está muito curto"
     ></app-message>
-    <app-message
+    <!--<app-message
       *ngIf="
         newUserForm.get('userName')?.errors?.['userExists'] &&
         newUserForm.get('userName')?.touched
       "
       message="Este username já pertence a um usuário"
-    ></app-message>
+    ></app-message>-->
   </div>
   <div class="form-group mb-3">
     <input
